--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,7 +3,7 @@
   background-color: #f1f1f1;
   display: inline-block;
   width: 100%;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 #appName {
