--- a/src/css/register.css
+++ b/src/css/register.css
@@ -3,3 +3,21 @@
     border: 1px solid grey;
     padding: 30px;
 }
+
+.btn {
+    width: auto !important;
+    border: 1px solid #ced4da !important;
+    margin: auto !important;
+  }
+  
+  .btn:hover {
+    background-color: grey;
+    color: white;
+  }
+
+.error {
+    color: red;
+    margin: 5px;
+    font-size: 12px;
+    font-style: italic;
+}
